# Laboratory_work_programming-

./: AndriiDolinskyi-ABookingAPI-1.0.0-resolved.yaml  README.md  pyproject.toml
lab_4/: .coverage  controllers.py  main.py  models.py  pyproject.toml  test.py
lab_4/controllers/: http_methods.py
lab_4/data_base/: __init__.py  models.py
lab_4/htmlcov/: _Users_andri_AppData_Local_pypoetry_Cache_virtualenvs_laboratory-work-programming--MxwfwPhr-py3_7_Lib_site-packages__virtualenv_py.html  _Users_andri_AppData_Local_pypoetry_Cache_virtualenvs_laboratory-work-programming--MxwfwPhr-py3_7_Lib_site-packages_alembic___init___py.html  _Users_andri_AppData_Local_pypoetry_Cache_virtualenvs_laboratory-work-programming--MxwfwPhr-py3_7_Lib_site-packages_alembic_autogenerate___init___py.html  _Users_andri_AppData_Local_pypoetry_Cache_virtualenvs_laboratory-work-programming--MxwfwPhr-py3_7_Lib_site-packages_alembic_autogenerate_api_py.html  _Users_andri_AppData_Local_pypoetry_Cache_virtualenvs_laboratory-work-programming--MxwfwPhr-py3_7_Lib_site-packages_alembic_autogenerate_compare_py.html  _Users_andri_AppData_Local_pypoetry_Cache_virtualenvs_laboratory-work-programming--MxwfwPhr-py3_7_Lib_site-packages_alembic_autogenerate_render_py.html  _Users_andri_AppData_Local_pypoetry_Cache_virtualenvs_laboratory-work-programming--MxwfwPhr-py3_7_Lib_site-packages_alembic_autogenerate_rewriter_py.html  _Users_andri_AppData_Local_pypoetry_Cache_virtualenvs_laboratory-work-programming--MxwfwPhr-py3_7_Lib_site-packages_alembic_command_py.html  (+386 more)
lab_4/migrations/versions/: eba0789c0614_.py
(+2 files in other folders)
