[tool.poetry]
name = "lab_4"
version = "0.1.0"
description = ""
authors = ["AndriiDolinskyi <andriywest3010@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.3"
Flask = "^1.1.2"
gevent = "^20.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
