[tool.poetry]
name = "lab_4"
version = "0.1.0"
description = ""
authors = ["AndriiDolinskyi <andriywest3010@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.9"
Flask = "^1.1.2"
gevent = "^20.9.0"
SQLAlchemy = "^1.3.20"
Flask-Migrate = "^2.5.3"
Flask-Script = "^2.0.6"
PyMySQL = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
